--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=tyrell_dev;uid=root;password=Star3wars"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
