--- a/DockerFile
+++ b/DockerFile
@@ -1,16 +1,23 @@
-FROM microsoft/dotnet:sdk AS build-env
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
+FROM microsoft/dotnet:2.1-aspnetcore-runtime-nanoserver-1803 AS base
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 
-# Copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore
+FROM microsoft/dotnet:2.1-sdk-nanoserver-1803 AS build
+WORKDIR /src
+COPY ["Tyrell/Tyrell.csproj", "Tyrell/"]
+RUN dotnet restore "Tyrell/Tyrell.csproj"
+COPY . .
+WORKDIR "/src/Tyrell"
+RUN dotnet build "Tyrell.csproj" -c Release -o /app
 
-# Copy everything else and build
-COPY . ./
-RUN dotnet publish -c Release -o out
+FROM build AS publish
+RUN dotnet publish "Tyrell.csproj" -c Release -o /app
 
-# Build runtime image
-FROM microsoft/dotnet:aspnetcore-runtime
+FROM base AS final
 WORKDIR /app
-COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "tyrell.dll"]
+COPY --from=publish /app .
+ENTRYPOINT ["dotnet", "Tyrell.dll"]
