--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString" : {
+    "RepoDB" : "Server=localhost;Database=repoDB;Uid=root;Pwd=Star3wars;"
+  }
 }
