Created post models and context, new migration made.

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionString" : {
-    "RepoDB" : "Server=localhost;Database=repoDB;Uid=root;Pwd=Star3wars;"
-  }
+    "TyrellDB" : "Server=localhost;Database=TyrellDB;Uid=root;Pwd=Star3wars;"
+  },
+  "AllowedHosts": "*"
 }
