--- a/Tyrell.csproj
+++ b/Tyrell.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+    <PackageReference Include="MySql.Data" Version="8.0.14" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.14" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
