Created basic blog app with admin user to create posts

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "SuperSecretPassPhraseForAuthentication@247"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
