--- a/Client/angular.json
+++ b/Client/angular.json
@@ -27,12 +27,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/bootstrap-markdown/css/bootstrap-markdown.min.css",
+              "./node_modules/prismjs/themes/prism.css",
+              "./src/styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/popper.js/dist/popper.js"
+              "./node_modules/bootstrap-markdown/js/bootstrap-markdown.js",
+              "./node_modules/prismjs/prism.js",
+              "./node_modules/prismjs/components/prism-css.min.js",
+              "./node_modules/prismjs/components/prism-javascript.min.js",
+              "./node_modules/prismjs/components/prism-typescript.min.js"
             ]
           },
           "configurations": {
