--- a/Client/package.json
+++ b/Client/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "angular-markdown-editor": "^2.0.2",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ngx-markdown": "^7.1.3",
     "popper.js": "^1.14.6",
+    "prismjs": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "yarn": "^1.13.0",
