--- a/Client/package.json
+++ b/Client/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "elec": "ng build && electron .",
+    "electron": "electron ."
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,7 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "electron": "^4.0.5",
     "jquery": "^3.3.1",
     "ngx-markdown": "^7.1.3",
     "popper.js": "^1.14.6",
