--- a/Client/angular.json
+++ b/Client/angular.json
@@ -31,7 +31,8 @@
               "./node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/bootstrap-markdown/css/bootstrap-markdown.min.css",
               "./node_modules/prismjs/themes/prism.css",
-              "./src/styles.scss"
+              "./src/styles.scss",
+              "./node_modules/bootstrap-social/bootstrap-social.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
