--- a/Client/package.json
+++ b/Client/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "angular-markdown-editor": "^2.0.2",
-    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.2.1",
+    "bootstrap-social": "^5.1.1",
     "core-js": "^2.5.4",
-    "electron": "^4.0.5",
     "jquery": "^3.3.1",
+    "mo-js": "^0.288.2",
     "ngx-markdown": "^7.1.3",
     "popper.js": "^1.14.6",
     "prismjs": "^1.15.0",
