Colour changes and other design stuuf

--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "angular-markdown-editor": "^2.0.2",
     "bootstrap": "^4.2.1",
